# tonic-buf-build

./: Cargo.toml  MIGRATION_0.13-0.14.md  README.md
examples/buf-work-yaml/: build.rs
examples/buf-yaml/: Cargo.toml  build.rs
examples/buf-yaml-advanced/: Cargo.toml  build.rs
examples/buf-yaml-advanced/src/: main.rs
examples/buf-yaml-custom-dir/: Cargo.toml  build.rs
examples/buf-yaml-custom-dir/proto/: buf.yaml  sample.proto
examples/buf-yaml-custom-dir/src/: main.rs
src/: buf.rs  lib.rs
