[package]
name = "tonic-buf-build"
version = "0.3.1"
edition = "2021"
description = "A build helper that integrates buf.build to tonic-build."
license = "MIT"
repository = "https://github.com/Valensas/tonic-buf-build"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic-build = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
uuid = { version = "1.17", features = ["v4", "fast-rng"] }
scopeguard = "1.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.17", features = ["v4", "js"] }
